apps/ghost/overlays/e2e/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  rules:
    - host: e2e-ghost.example.com
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 2368
  tls:
    - hosts:
        - e2e-ghost.example.com
      secretName: e2e-ghost-tls
